--- a/App/Views/index/inscrever.phtml
+++ b/App/Views/index/inscrever.phtml
@@ -4,40 +4,40 @@
 		<div class="col">
 			<a href="/"class="btn btn-success">voltar</a>
 			<form method="POST" action="/cadastrar" name="cadastro" onsubmit="return validaFormulario()" class="form-group">
-				<div class="box_nome form-group">
+				<div class="box_nome form-group mt-5">
 					<label>Nome:</label>
-					<input type="text" name="nome" value="<?= $this->view->usuario['nome']; ?>" class="form-control w-50" maxlength="15" />
+					<input type="text" name="nome" value="<?= $this->view->usuario['nome']; ?>" class="form-control" maxlength="15" />
 				</div>
 				<div class="box_sobrenome form-group">
 					<label>Sobrenome:</label>
-					<input type="text" name="sobrenome" value="<?= $this->view->usuario['sobrenome']; ?>" class="form-control w-50" maxlength="15" />
+					<input type="text" name="sobrenome" value="<?= $this->view->usuario['sobrenome']; ?>" class="form-control" maxlength="15" />
 				</div>
 				<div class="box_nascimento form-group">
 					<label>Data de nascimento:</label>
-					<input type="date" name="nascimento" value="<?= $this->view->usuario['nascimento']; ?>" class="form-control w-25" />
+					<input type="date" name="nascimento" value="<?= $this->view->usuario['nascimento']; ?>" class="form-control data" />
 				</div>
 				<div class="box_tempo form-group">
 					<label>Tempo de prática em kinesis:</label>
-					<input type="date" name="comeco" value="<?= $this->view->usuario['comeco']; ?>" class="form-control w-25" />
+					<input type="date" name="comeco" value="<?= $this->view->usuario['comeco']; ?>" class="form-control data" />
 				</div>
 				<div class="box_genero form-group">
 					<label>Gênero:</label>
 					<div class="form-check">
-						<input type="radio" name="genero" value="masculino" id="masculino" class="form-check-input" <?php $this->view->usuario['genero']=='masculino'? print('checked'):''; ?> />
+						<input type="radio" name="genero" value="masculino" id="masculino" class="form-check-input genero" <?php $this->view->usuario['genero']=='masculino'? print('checked'):''; ?> />
 						<label for="masculino" class="form-check-label">masculino</label>
 					</div>
 					<div class="form-check">
-						<input type="radio" name="genero" value="feminino" id="feminino" class="form-check-input" <?php $this->view->usuario['genero']=='feminino'? print('checked'):''; ?> />
+						<input type="radio" name="genero" value="feminino" id="feminino" class="form-check-input genero" <?php $this->view->usuario['genero']=='feminino'? print('checked'):''; ?> />
 						<label for="feminino" class="form-check-label">feminino</label>
 					</div>
 					<div class="form-check">
-						<input type="radio" name="genero" value="outro" id="outro" class="form-check-input" <?php $this->view->usuario['genero']=='outro'? print('checked'):''; ?> />
+						<input type="radio" name="genero" value="outro" id="outro" class="form-check-input genero" <?php $this->view->usuario['genero']=='outro'? print('checked'):''; ?> />
 						<label for="outro" class="form-check-label">outro</label>
 					</div>
 				</div>
 				<div class="box_login form-group">
 					<label>Login:</label>
-					<input type="text" name="login" value="<?= $this->view->usuario['nick']; ?>" maxlength="10" class="form-control w-50" />
+					<input type="text" name="login" value="<?= $this->view->usuario['nick']; ?>" maxlength="10" class="form-control" />
 					<?php
 						if($this->view->loginExiste){
 							print("<small class='text text-danger'>login já existe</small>");
@@ -46,7 +46,7 @@
 				</div>
 				<div class="box_email form-group">
 					<label>Email:</label>
-					<input type="text" name="email" value="<?= $this->view->usuario['email']; ?>" maxlength="40" class="form-control w-50" />
+					<input type="text" name="email" value="<?= $this->view->usuario['email']; ?>" maxlength="40" class="form-control" />
 					<?php 
 						if($this->view->emailExiste){
 							print("<small class='text text-danger'>email já cadastrado</small>");
@@ -55,12 +55,12 @@
 				</div>
 				<div class="box_senha form-group">
 					<label>Senha:</label>
-					<input type="password" name="senha" maxlength="15" class="form-control w-50" />
+					<input type="password" name="senha" maxlength="15" class="form-control" />
 					<small>máximo 15 caracteres</small>
 				</div>
 				<div class="box_senha_conf form-group">
 					<label>Confirmação da senha:</label>
-					<input type="password" name="confirmacao" maxlength="15" class="form-control w-50" />
+					<input type="password" name="confirmacao" maxlength="15" class="form-control" />
 				</div>
 				<!-- <div></div> VALIDAÇÃO(NÃO SOU UM ROBÔ) -->
 					<button type="submit" class="btn btn-success btn-lg px-4 py-1">cadastrar</button>
