--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,17 +7,54 @@ body{
 
 /* ######## INDEX ######## */
 @media (min-width: 768px){
-	.index .box_senha{
-		padding-bottom: 10px;
+	.index .row{
+		display: flex;
+			justify-content: start;
 	}
+
 	.index .banner{
+		width: 49%;
 		background-image: linear-gradient(to right, transparent 0%, #D9FFDE 100%), url('../img/wallpaper.jpg');
 		background-size: cover;
 	}
+	.index .login{
+		width: 49%;
+		
+		background-image: linear-gradient(to left, transparent 0%, #D9FFDE 100%);
+	}
+
+	.index form{
+		width: 83%;
+		
+		margin: 0 auto;
+	}
+
+	.index .box_login{
+		display: flex;
+			align-items: flex-end;
+			flex-direction: column;
+	}
+	.index .box_senha{
+		display: flex;
+			align-items: flex-end;
+			flex-direction: column;
+
+		padding-bottom: 10px;
+	}
+	.index .box_entrada{
+		display: flex;
+		justify-content: flex-end;
+
+		clear: both;
+		font-family: arial;
+	}
+
 	.index .login label{
 		font-size: 30px;
 	}
 	.index .login input{
+		width: 350px;
+
 		padding: 3px;
 	
 		font-size: 18px;
@@ -27,30 +64,75 @@ body{
 		color: #444;
 	}
 	.index .login button{
+		margin-right: 10px;
+		margin-bottom: 5px;
+
+		float: right;
 		border-radius: 15px;
 		font-family: arial;
 	}
-	.index .login{
-		background-image: linear-gradient(to left, transparent 0%, #D9FFDE 100%);
-	}
-	.index form{
-		/* border: 1px solid red; */
-	}
-	.index .msg{
-		/* border: 1px solid red; */
-	}
-	.index .box_entrada{
-		border-top: 1px solid gray;
-		font-family: arial;
-	}
 	.index .box_entrada a{
-		width: 49%;
+		width: 190px;
 	
 		display: inline-block;
 	
 		text-align: center;
-		font-weight: bold;
 		font-size: 18px;
+		border-top: 1px solid gray;
+	}
+}
+@media (max-width: 768px){
+	.index .banner{
+		width: 100%;
+		height: 25%;
+
+		background-image: linear-gradient(to bottom, transparent 0%, #D9FFDE 100%), url('../img/wallpaper.jpg');
+	}
+	.index .login{
+		width: 100%;
+		height: 73%;
+	}
+
+	.index h1{
+		margin: 0 !important;
+	}
+	.index form{
+		width: 83%;
+		
+		margin: 0 auto;
+		margin-top: 30px;
+	}
+
+	.index .login label{
+		font-size: 30px;
+	}
+	.index button{
+		margin-left: 10px;
+
+		border-radius: 15px;
+	}
+	.index .box_entrada{
+		display: flex;
+			justify-content: space-around;
+
+		height: 100px;
+
+		margin-top: 10px;
+		border-top: 1px solid gray;
+	}
+	.index .box_entrada a{
+		display: inline-block;
+
+		width: 150px;
+		height: 30px;
+
+		padding: 0 7px;
+		margin: 10px 20px;
+
+		font-size: 18px;
+		border: 1px solid gray;
+		border-radius: 15px;
+		text-align: center;
 	}
 }
 /* ######## INDEX ######## */
