--- a/App/Views/index/msg_recuperar.phtml
+++ b/App/Views/index/msg_recuperar.phtml
@@ -1,2 +1,8 @@
-<p>verifique seu email</p>
-<a href="/">login</a>
+<div class="container msg_recuperar">
+    <div class="row">
+        <div class="col">
+            <h3 class="text-success"><u>verifique seu email</u></h3>
+            <a href="/" class="btn btn-success ml-2">voltar</a>
+        </div>
+    </div>
+</div>
