--- a/public/css/style.css
+++ b/public/css/style.css
@@ -202,3 +202,7 @@ span{
 	margin-top: 40px;
 }
 /* ######## msg_recuperar ######## */
+
+/* ######## painel ######## */
+
+/* ######## painel ######## */
